cmake_minimum_required(VERSION 3.30)
project(ManejoDeOperadores)

set(CMAKE_CXX_STANDARD 20)

add_executable(ManejoDeOperadores main.cpp)
add_executable(evaluacionAdmisiones evaluacionAdmisiones.cpp)
add_executable(operadoresLogicosRelacionales cmake-build-debug/operadoresLogicosRelacionales.cpp)
add_executable(operadoresBitwise cmake-build-debug/operadoresBitwise.cpp)
add_executable(gestionPermisos cmake-build-debug/gestionPermisos.cpp)
add_executable(cuentaBancaria.cpp CuentaBancariaa.cpp)
add_executable(operadoresAsignacion operadoresAsignacion.cpp)
add_executable(operadoresIncrementoPrePost operadoresIncrementoPrePost.cpp)
add_executable(tolkensAlternativos tolkensAlternativos.cpp)
add_executable(conversionTipos cmake-build-debug/conversionTipos.cpp)
add_executable(conversionExplicita cmake-build-debug/conversionExplicita.cpp)
add_executable(usoDeConstantes cmake-build-debug/usoDeConstantes.cpp)
